# se-toolkit-lab-7

./: README.md  docker-compose.yml
bot/: .env.bot.example  Dockerfile  PLAN.md  README.md  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py  base.py  health.py  help.py  labs.py  natural_language.py  scores.py  start.py
bot/services/: __init__.py  llm_client.py  lms_client.py
flutter_chatbot/: README.md
